poprawiona strona error 404, dodana responsywność strony dla mobile

--- a/errors/404.html
+++ b/errors/404.html
@@ -2,9 +2,18 @@
 <html>
     <head>
         <title>Przykład wykorzystania wzorca MVC</title>
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     </head>
-    <body>
-		<h1>Error 404!</h1>
+    <body style="background-color: #eee;">
+      <div class="container">
+        <div class="jumbotron" style="text-align: center;">
+      <h1>Błąd 404</h1>
+      <p>Nie znaleziono strony</p>
+      <p><a class="btn btn-default btn-lg" href="./" role="button">Wróć do strony głównej</a></p>
+    </div>
+      </div>
 	</body>
 </html>
